added to issues facing ghana in About section

--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
 		</nav>
 		<div class="headingBg">
 			<div class="container">
-				<div class="well well-sm">
-					<h1 id="mainTitle"><strong>People For Ghana<br/>_______________________</strong></h1>
-					<h3 id="subTitle">help + support for Ghanians</h3>
-				</div>
+				<h1 id="mainTitle"><strong>People For Ghana<br/>_______________________</strong></h1>
+				<h3 id="subTitle">help + support for Ghanians</h3>
 			</div>
 		</div>
 		<div class="contentBg">
@@ -72,11 +70,15 @@
 						<p>Ghana, or the Republic of Ghana, is a country home to more than 27 million African's and is located along the golf of Guinea and the Atlantic ocean, in the subregion of South Africa. Despite the growing prosperity among Ghanians, there are still major issues in everyday life that go unnoticed to those who are more fortunate. Some issues include:<br/>
 							<ul class="list">
 								<li><strong>poverty</strong></li>
-								<p class="listDescr">-&nbsp;&nbsp;While Ghana's overall poverty level has decreased, several regions in the North have only seen very small differences. Poverty rates in the North have been reported to be over two to three times the national average.</p>
+									<p class="listDescr">-&nbsp;&nbsp;While Ghana's overall poverty level has decreased, several regions in the North have only seen very small differences. Poverty rates in the North have been reported to be over two to three times the national average.</p>
 								<li><strong>hunger</strong></li>
+									<p class="listDescr">-&nbsp;&nbsp;<a href="https://www.wfp.org/stories/10-facts-about-hunger-ghana">Here</a> are some facts about hunger facing all people in Ghana today. It may be hard to believe but at least <strong>45%</strong> live on less than $1.45 per day. In Northern Ghana over <strong>88%</strong> of livelyhoods rely upon crop production, and they continue to face malnutrition due to lack of food.</p> 
 								<li><strong>corruption</strong></li>
+									<p class="listDescr">Unfortunately corruption has been prevalent in Ghana since independence was gained. From paying off the cops for drug possession to bribing politcal officials, corruption involving money and goods is common practice. Anti-corruption laws have been enacted and are apart of Ghana's constitution, but enforcing them is troublesome to say the least. Power and family relations prevails easily over the law.</p>
 								<li><strong>illiteracy</strong></li>
+									<p class="listDescr">Only 71% of Ghana's population is literate, leaving almost a third (or one out of every three people) illiterate, unable to read or write.</p>
 								<li><strong>poor government</strong></li>
+									<p class="listDescr">Most of the problems Ghana faces could be fixed or supressed if the government became much more transparent and forward with its operations and focused on the crucial issues like malnutrition and corruption. Thankfully progress is being made slowly and things are getting better, but the government of Ghana could do a lot to help improve the situation.</p>
 							</ul>
 						</p>
 					</div>
