Fonts links moved from index.html to main.css using @import, footer text shrunk, navElement class added to navbar links, and 'About Us' section added.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,6 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-		<!-- FONTS -->
-		<!-- Hammersmith One (main titles) -->
-		<link href='https://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet' type='text/css'>
-		<!-- Noto Sans (titles/subtitles) -->
-		<link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
-		<!-- Oxygen (paragraphs/body text)-->
-		<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-		<!-- Pacifico (main title) -->
-		<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 		<!-- JQuery 2.20 -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<!-- JQuery UI -->
@@ -46,10 +37,11 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-left">
-						<li class="active"><a href="#home">Home</a></li>
-						<li><a href="#issues">Issues</a>
-						<li><a href="#progress">Progress</a></li>
-						<li><a href="#difference">Make a Difference</a></li>
+						<li class="active"><a href="#home" class="navElement">Home</a></li>
+						<li><a href="#issues" class="navElement">Issues</a>
+						<li><a href="#progress" class="navElement">Progress</a></li>
+						<li><a href="#about" class="navElement">About Us</a></li>
+						<li><a href="#difference" class="navElement">Make a Difference</a></li>
 					</li>
 					</ul>
 				</div>
@@ -69,14 +61,14 @@
 					<div class="row">
 						<div class="col-md-8">
 							<h1>Problems Facing Ghana Today</h1>
-							<h4><em>Ghana means "Warrior King"</em></h4>
+							<h4><em>Ghana means "gold"</em></h4>
 							<p>Ghana, or the Republic of Ghana, is a country home to more than 27 million African's and is located along the golf of Guinea and the Atlantic ocean, in the subregion of South Africa. Despite the growing prosperity among Ghanians, there are still major issues in everyday life that go unnoticed to those who are more fortunate.</p>
 							<p style="font-size: 1.9em;"><em>click to expand</em><br/></p>
 							<div class="panel-group" id="accordian">
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<span data-toggle="collapse" data-parent="#accordion" href="#collapse1">Poverty</span>
+											<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Poverty</a>
 										</h4>
 									</div>
 									<div id="collapse1" class="panel-collapse collapse">
@@ -89,7 +81,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<span data-toggle="collapse" data-parent="#accordion" href="#collapse2">Hunger</span>
+											<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Hunger</a>
 										</h4>
 									</div>
 									<div id="collapse2" class="panel-collapse collapse">
@@ -101,7 +93,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<span  data-toggle="collapse" data-parent="#accordion" href="#collapse3">Corruption</span>
+											<a  data-toggle="collapse" data-parent="#accordion" href="#collapse3">Corruption</a>
 										</h4>
 									</div>
 									<div id="collapse3" class="panel-collapse collapse">
@@ -113,7 +105,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<span data-toggle="collapse" data-parent="#accordion" href="#collapse4">Illiteracy</span>
+											<a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Illiteracy</a>
 										</h4>
 									</div>
 									<div id="collapse4" class="panel-collapse collapse">
@@ -125,7 +117,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<span data-toggle="collapse" data-parent="#accordion" href="#collapse5">Poor Government</span>
+											<a data-toggle="collapse" data-parent="#accordion" href="#collapse5">Poor Government</a>
 										</h4>
 									</div>
 									<div id="collapse5" class="panel-collapse collapse">
@@ -145,13 +137,20 @@
 					<h1>Progress Towards a Better Ghana</h1>
 				</div>
 				<!--<img class="img-responsive" src="images/ghana_streets.jpg"/><br/><br/>-->
-				
-			</div>
-			<div class="ghanaBg">
 
 			</div>
+			<div class="ghanaBg"></div>
 			<div class="container">
 				<p><br/>With such a troublesome economic and political situation, Ghana still has managed to <a href="http://www.odi.org/publications/9371-ghana-rising-star-progress-political-voice-health-education">improve</a> itself within the last 20 years. Since the 1990's Ghana has been steadily given rise to more political voice, while military and government suppression has decreased. Malaria deaths have even halved in the country from 2001 to 2013 according to the Overseas Development Institue (ODI, odi.org). Improvements in health-care and education have also drastically improved.<br/><br/>Despite the strong development and progress made, there is still a long ways to go. The three Northern areas of Ghana are considered the poorest and poverty levels are very high. Reliance to live is based solely upon growing crops, leading to malnutrition and poverty when droughts or other poor conditions destroy foods.<br/></p>
+
+				<div id="about" style="text-align:center;">
+					<h1>About Us</h1>
+					<h3 class="moveDown">Mission Statement</h3>
+					<p>Action against poverty by the people</p>
+					<h3 class="moveDown">Vision Statement</h3>
+					<p>To use resources to empower ghanians by the people of the World</p>
+					<br/>
+				</div>
 
 				<div id="difference">
 					<h1>Help Make a Difference&nbsp;&nbsp;<span class="glyphicon glyphicon-heart"></span></h1>
@@ -165,7 +164,7 @@
 		<script type="text/javascript">
 			// Smooth scrolling links
 			$(document).ready(function(){
-				$('a[href^="#"]').on('click',function (e) {
+				$('.navElement').on('click',function (e) {
 
 	    			e.preventDefault();
 
