--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<!-- Scroll and other JS functions -->
-		<script src="scripts/functions.js"></script>
 		<!-- Main styling -->
 		<link href='main.css' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<div class="container">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<!-- Brand and toggle grouped together for better display -->
 			<div class="container-fluid">
@@ -47,10 +46,11 @@
 				</div>
 			</div>
 		</nav>
+		</div>
 		<div id="home">
 		<div class="headingBg">
 			<div class="container">
-				<h1 id="mainTitle"><strong>People For Ghana<br/>_______________________</strong></h1>
+				<h1 class="mainTitle"><strong>People For Ghana</strong></h1>
 				<h3 id="subTitle">help + support for Ghanians</h3>
 			</div>
 		</div>
