--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div id="home">
 		<div class="headingBg">
 			<div class="container">
-				<h1 class="mainTitle"><strong>People For Ghana</strong></h1>
+				<h1 id="mainTitle"><strong>People For Ghana</strong></h1>
 				<h3 id="subTitle">help + support for Ghanians</h3>
 			</div>
 		</div>
