Small typo fixes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<h4 class="panel-title">
-											<a data-toggle="collapse" data-parent="#accordion" href="#collapse5">Poor Government</a>
+											<a data-toggle="collapse" data-parent="#accordion" href="#collapse5">Poor Governance</a>
 										</h4>
 									</div>
 									<div id="collapse5" class="panel-collapse collapse">
@@ -148,7 +148,7 @@
 					<h3 class="moveDown">Mission Statement</h3>
 					<p>Action against poverty by the people</p>
 					<h3 class="moveDown">Vision Statement</h3>
-					<p>To use resources to empower ghanians by the people of the World</p>
+					<p>To use resources to empower Ghanians by the people of the World</p>
 					<br/>
 				</div>
 
